--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,37 @@ services:
     depends_on:
       - prometheus
 
+  elasticsearch:
+    image: elasticsearch:9.1.3
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: kibana:9.1.3
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on: [ elasticsearch ]
+
+  fluentd:
+    build: ./fluentd
+    container_name: fluentd
+    user: root
+    volumes:
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro # Docker JSON logs
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Docker metadata
+      - ./fluentd/fluent.conf:/fluentd/etc/fluent.conf:ro
+      - ./fluentd/conf.d:/etc/fluent/conf.d:ro
+    depends_on: [ elasticsearch ]
+
   loader:
     image: curlimages/curl:8.10.1
     container_name: loader
@@ -73,3 +104,4 @@ services:
 
 volumes:
   grafana-data:
+  es-data:
