--- a/provisioning/grafana/datasource.yml
+++ b/provisioning/grafana/datasource.yml
@@ -1,6 +1,7 @@
 apiVersion: 1
 datasources:
-  - name: Prometheus
+  - uid: prometheus_uid 
+    name: Prometheus
     type: prometheus
     access: proxy
     url: http://prometheus:9090
