added MCP server for elasticsarch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,21 @@ services:
       retries: 30
       start_period: 30s
 
+  elasticsearch-mcp:
+    # https://github.com/elastic/mcp-server-elasticsearch
+    container_name: elasticsearch-mcp
+    image: mcp/elasticsearch:latest
+    command: [ "http" ]
+    logging:
+      driver: "local"
+    ports:
+      - "7071:8080"
+    environment:
+      ES_URL: http://elasticsearch:9200
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
   kibana:
     image: kibana:9.1.3
     container_name: kibana
