--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,23 @@ services:
       retries: 12
       start_period: 20s
 
+  grafana-mcp:
+    container_name: grafana-mcp
+    image: mcp/grafana:latest
+    environment:
+      GRAFANA_URL: http://grafana:3000
+      GRAFANA_USERNAME: admin
+      GRAFANA_PASSWORD: admin
+    command: >
+      --transport streamable-http
+      --address 0.0.0.0:8080
+      --endpoint-path /mcp
+    ports:
+      - "7073:8080"
+    depends_on:
+      grafana:
+        condition: service_healthy
+
   elasticsearch:
     image: elasticsearch:9.1.3
     container_name: elasticsearch
@@ -123,7 +140,6 @@ services:
       start_period: 30s
 
   elasticsearch-mcp:
-    # https://github.com/elastic/mcp-server-elasticsearch
     container_name: elasticsearch-mcp
     image: mcp/elasticsearch:latest
     command: [ "http" ]
