--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,124 +1,13 @@
 services:
-
-  app:
-    build:
-      dockerfile: Dockerfile
-      context: .
-    container_name: app
-    ports:
-      - "8080:8080"
-      - "8081:8081"
-    labels:
-      com.docker.compose.service: app # cAdvisor labels
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:8081/actuator/health" ]
-      interval: 10s
-      timeout: 3s
-      retries: 12
-      start_period: 20s
-
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.52.1
-    container_name: cadvisor
-    logging:
-      driver: "local"
-    command:
-      - --docker=unix:///var/run/docker.sock
-      - --docker_only=false
-      - --containerd=/run/containerd/containerd.sock
-      - --containerd-namespace=moby
-      # use legacy flag for Docker labels
-      - --whitelisted_container_labels=com.docker.compose.service,com.docker.compose.project
-      # use allowlist flag for containerd
-      - --store_container_labels=true
-    ports:
-      - "9080:8080"
-    privileged: true
-    volumes:
-      - /:/rootfs:ro
-      - /run/containerd:/run/containerd:ro
-      - /var/lib/containerd:/var/lib/containerd:ro
-      - /sys:/sys:ro
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:8080/healthz" ]
-      interval: 10s
-      timeout: 3s
-      retries: 12
-      start_period: 10s
-
-  prometheus:
-    image: prom/prometheus:v2.54.1
-    container_name: prometheus
-    logging:
-      driver: "local"
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    volumes:
-      - ./provisioning/prometheus/config.yml:/etc/prometheus/prometheus.yml:ro
-    ports:
-      - "9090:9090"
-    depends_on:
-      app:
-        condition: service_healthy
-      cadvisor:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:9090/-/healthy" ]
-      interval: 10s
-      timeout: 3s
-      retries: 12
-      start_period: 10s
-
-  prometheus-mcp:
-    container_name: prometheus-mcp
-    image: ghcr.io/pab1it0/prometheus-mcp-server:latest
+  random-app:
+    image: chentex/random-logger:latest
+    container_name: random-app
     environment:
-      PROMETHEUS_URL: http://prometheus:9090
-      PROMETHEUS_MCP_SERVER_TRANSPORT: http
-    ports:
-      - "7072:8080"
-    depends_on:
-      prometheus:
-        condition: service_healthy
-
-  grafana:
-    image: grafana/grafana:11.1.0
-    container_name: grafana
+      - LOG_FREQ=1
     logging:
-      driver: "local"
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana-data:/var/lib/grafana
-      - ./provisioning/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml:ro
-      - ./provisioning/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
-      - ./provisioning/grafana/alerting:/etc/grafana/provisioning/alerting:ro
-    depends_on:
-      prometheus:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- http://localhost:3000/api/health" ]
-      interval: 10s
-      timeout: 3s
-      retries: 12
-      start_period: 20s
-
-  grafana-mcp:
-    container_name: grafana-mcp
-    image: mcp/grafana:latest
-    environment:
-      GRAFANA_URL: http://grafana:3000
-      GRAFANA_USERNAME: admin
-      GRAFANA_PASSWORD: admin
-    command: >
-      --transport streamable-http
-      --address 0.0.0.0:8080
-      --endpoint-path /mcp
-    ports:
-      - "7073:8080"
-    depends_on:
-      grafana:
-        condition: service_healthy
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
 
   elasticsearch:
     image: elasticsearch:9.1.3
@@ -133,26 +22,12 @@ services:
     volumes:
       - es-data:/usr/share/elasticsearch/data
     healthcheck:
-      test: [ "CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/9200'" ]
+      test: ["CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/9200'"]
       interval: 10s
       timeout: 5s
       retries: 30
       start_period: 30s
     mem_limit: "4g"
-
-  elasticsearch-mcp:
-    container_name: elasticsearch-mcp
-    image: mcp/elasticsearch:latest
-    command: [ "http" ]
-    logging:
-      driver: "local"
-    ports:
-      - "7071:8080"
-    environment:
-      ES_URL: http://elasticsearch:9200
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
 
   kibana:
     image: kibana:9.1.3
@@ -167,7 +42,7 @@ services:
       elasticsearch:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/5601'" ]
+      test: ["CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/5601'"]
       interval: 10s
       timeout: 5s
       retries: 24
@@ -182,70 +57,26 @@ services:
       - DATA_VIEW_NAME=Docker logs
     logging:
       driver: "local"
-    command: [ "/bin/sh", "/setup/kibana_setup.sh" ]
+    command: ["/bin/sh", "/setup/kibana_setup.sh"]
     volumes:
       - ./provisioning/kibana/kibana_setup.sh:/setup/kibana_setup.sh:ro
     depends_on:
       kibana:
         condition: service_healthy
 
-  fluentd:
-    build: ./provisioning/fluentd
-    container_name: fluentd
-    user: root
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.15.2
+    container_name: logstash
+    environment:
+      LS_JAVA_OPTS: "-Xms256m -Xmx256m"
+    ports:
+      - "12201:12201/udp"
     volumes:
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro # Docker JSON logs
-      - /var/run/docker.sock:/var/run/docker.sock:ro # Docker metadata
-      - ./provisioning/fluentd/conf.d:/etc/fluent/conf.d:ro
-    logging:
-      driver: "local"
+      - ./provisioning/logstash/pipeline:/usr/share/logstash/pipeline:ro
     depends_on:
       elasticsearch:
         condition: service_healthy
 
-  loader:
-    image: curlimages/curl:8.10.1
-    container_name: loader
-    command: [ "/bin/sh", "/fake_load.sh" ]
-    logging:
-      driver: "local"
-    environment:
-      - BASE_URL=http://app:8080
-      - WORKERS=6 # tweak
-      - SLEEP_MIN=0.05
-      - SLEEP_MAX=0.50
-    volumes:
-      - ./provisioning/fake_load.sh:/fake_load.sh:ro
-    depends_on:
-      app:
-        condition: service_healthy
-
-  mcpo:
-    image: ghcr.io/open-webui/mcpo:main
-    container_name: mcpo
-    volumes:
-      - ./provisioning/mcpo.config.json:/config/mcpo.config.json:ro
-    command: ["--config","/config/mcpo.config.json","--hot-reload","--api-key","top-secret"]
-    ports:
-      - "8000:8000"
-
-  open-webui:
-    image: ghcr.io/open-webui/open-webui:latest
-    container_name: open-webui
-    depends_on:
-      - mcpo
-    ports:
-      - "3001:8080"
-    environment:
-      - ENABLE_DIRECT_CONNECTIONS=True
-      - TOOL_SERVER_CONNECTIONS=[{"name":"elasticsearch","url":"http://mcpo:8000/elasticsearch","api_key":"top-secret"}]
-      - ENABLE_SIGNUP=False
-      - WEBUI_AUTH=False
-      - DEFAULT_USER_ROLE=admin
-    volumes:
-      - openwebui-data:/app/backend/data
-
 volumes:
   grafana-data:
   es-data:
-  openwebui-data:
