--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,65 @@
 services:
-  random-app:
-    image: chentex/random-logger:latest
-    container_name: random-app
-    environment:
-      - LOG_FREQ=1
-    logging:
-      driver: gelf
-      options:
-        gelf-address: "udp://127.0.0.1:12201"
-
-  elasticsearch:
-    image: elasticsearch:9.1.3
-    container_name: elasticsearch
-    logging:
-      driver: "local"
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-    ports:
-      - "9200:9200"
+  mcpo:
+    image: ghcr.io/open-webui/mcpo:main
+    container_name: mcpo
     volumes:
-      - es-data:/usr/share/elasticsearch/data
-    healthcheck:
-      test: ["CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/9200'"]
-      interval: 10s
-      timeout: 5s
-      retries: 30
-      start_period: 30s
-    mem_limit: "4g"
-
-  kibana:
-    image: kibana:9.1.3
-    container_name: kibana
-    logging:
-      driver: "local"
+      - ./provisioning/openwebui/mcpo.config.json:/config/mcpo.config.json:ro
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
+    command:
+      [
+        "--config",
+        "/config/mcpo.config.json",
+        "--hot-reload",
+        "--api-key",
+        "top-secret",
+      ]
     ports:
-      - "5601:5601"
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD-SHELL", "/bin/bash -lc '</dev/tcp/localhost/5601'"]
-      interval: 10s
-      timeout: 5s
-      retries: 24
-      start_period: 30s
+      - "8000:8000"
 
-  kibana-setup:
-    image: curlimages/curl:8.10.1
-    container_name: kibana-setup
-    environment:
-      - KBN_URL=http://kibana:5601
-      - DATA_VIEW_TITLE=docker-logs-*
-      - DATA_VIEW_NAME=Docker logs
-    logging:
-      driver: "local"
-    command: ["/bin/sh", "/setup/kibana_setup.sh"]
-    volumes:
-      - ./provisioning/kibana/kibana_setup.sh:/setup/kibana_setup.sh:ro
-    depends_on:
-      kibana:
-        condition: service_healthy
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:8.15.2
-    container_name: logstash
-    environment:
-      LS_JAVA_OPTS: "-Xms256m -Xmx256m"
+  open-webui:
+    image: ghcr.io/open-webui/open-webui:latest
+    container_name: open-webui
     ports:
-      - "12201:12201/udp"
+      - "3001:8080"
+    environment:
+      GLOBAL_LOG_LEVEL: debug
+      ENABLE_OPENAI_API: True
+      OPENAI_API_BASE_URL: http://bag:80/api/v1
+      OPENAI_API_KEY: bedrock
+      ENABLE_PERSISTENT_CONFIG: False
+      ENABLE_DIRECT_CONNECTIONS: True
+      ENABLE_SIGNUP: False
+      WEBUI_AUTH: False
+      DEFAULT_USER_ROLE: admin
+      TOOL_SERVER_CONNECTIONS: >-
+        [
+          {
+            "url": "http://mcpo:8000/aws-mcp-cost-explorer",
+            "path": "/openapi.json",
+            "auth_type": "bearer",
+            "key": "top-secret",
+            "config": {},
+            "info": { "name": "AWS Cost Explorer", "description": "AWS Cost Explorer via MCPO" }
+          }
+        ]
     volumes:
-      - ./provisioning/logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - openwebui-data:/app/backend/data
     depends_on:
-      elasticsearch:
-        condition: service_healthy
+      mcpo:
+        condition: service_started
+
+  bag:
+    image: bedrock-gateway # follow https://docs.openwebui.com/tutorials/integrations/amazon-bedrock/
+    container_name: bag
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
+    ports:
+      - "8001:80"
 
 volumes:
-  grafana-data:
-  es-data:
+  openwebui-data:
